@@ -12,6 +12,7 @@ import org.testng.annotations.BeforeMethod;
 
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 
@@ -54,13 +55,13 @@ public class BaseHooks {
         String selenoidURL = "http://selenoid:4444/wd/hub";
         DesiredCapabilities caps = new DesiredCapabilities();
         caps.setBrowserName("chrome");
-        caps.setVersion("86.0");
+        caps.setVersion("85.0");
         caps.setCapability("enableVNC", true);
         caps.setCapability("screenResolution", "1280x1024");
         caps.setCapability("enableVideo", true);
         caps.setCapability("enableLog", true);
 
-        RemoteWebDriver driver = new RemoteWebDriver(URI.create(selenoidURL).toURL(), caps);
+        RemoteWebDriver driver = new RemoteWebDriver(new URL(selenoidURL), caps);
         driver.manage().timeouts().implicitlyWait(15, TimeUnit.SECONDS);
 
         webDriverThreadLocal.set(driver);
